# Audyn

./: .gitignore  MANIFEST.in  PRETRAINED_MODELS.md  PRETRAINED_MODELS.rst  README.md  codecov.yaml  hubconf.py  pyproject.toml  setup.py
.github/workflows/: build_wheels.yaml  install_ffmpeg.yaml  lint.yaml  store_transformers_hubert.yaml  test_docs.yaml  test_package.yaml  test_package_for_cache.yaml  test_package_macos-13.yaml  test_package_macos-13_python-3.10_torch-2.0.yaml  test_package_macos-13_python-3.10_torch-2.1.yaml  test_package_macos-13_python-3.10_torch-2.2.yaml  test_package_macos-13_python-3.11_torch-2.0.yaml  test_package_macos-13_python-3.11_torch-2.1.yaml  test_package_macos-13_python-3.11_torch-2.2.yaml  test_package_macos-13_python-3.12_torch-2.0.yaml  test_package_macos-13_python-3.12_torch-2.1.yaml  test_package_macos-13_python-3.12_torch-2.2.yaml  test_package_macos-13_python-3.12_torch-2.3.yaml  test_package_macos-13_python-3.13_torch-2.2.yaml  test_package_macos-13_python-3.8_torch-2.0.yaml  test_package_macos-13_python-3.8_torch-2.1.yaml  test_package_macos-13_python-3.8_torch-2.2.yaml  test_package_macos-13_python-3.9_torch-2.0.yaml  test_package_macos-13_python-3.9_torch-2.1.yaml  test_package_macos-13_python-3.9_torch-2.2.yaml  test_package_macos-15-intel.yaml  test_package_macos-15-intel_python-3.10_torch-2.0.yaml  test_package_macos-15-intel_python-3.10_torch-2.1.yaml  test_package_macos-15-intel_python-3.10_torch-2.2.yaml  test_package_macos-15-intel_python-3.11_torch-2.0.yaml  test_package_macos-15-intel_python-3.11_torch-2.1.yaml  test_package_macos-15-intel_python-3.11_torch-2.2.yaml  test_package_macos-15-intel_python-3.12_torch-2.2.yaml  test_package_macos-15-intel_python-3.13_torch-2.2.yaml  test_package_macos-latest.yaml  test_package_macos-latest_python-3.11_torch-2.0.yaml  test_package_macos-latest_python-3.11_torch-2.1.yaml  test_package_macos-latest_python-3.11_torch-2.2.yaml  test_package_macos-latest_python-3.11_torch-2.3.yaml  test_package_macos-latest_python-3.11_torch-2.4.yaml  (+86 more)
audyn/: __init__.py
audyn/amp/: __init__.py  grad_scaler.py
audyn/audio/: __init__.py
audyn/configs/: config.yaml  decode-musdb18.yaml  download-dnr.yaml  download-fma.yaml  download-fsd50k.yaml  download-ljspeech.yaml  download-lsx.yaml  download-mtat.yaml  download-mtg-jamendo.yaml  download-musdb18.yaml  download-openmic2018.yaml  download-singmos.yaml  download-song-describer.yaml  download-vctk.yaml
audyn/criterion/: __init__.py  autoregressive.py  base.py  bsrnn.py  contrastive.py  distance.py  fastspeech.py  flow.py  gan.py  glowtts.py  hifigan.py  lsgan.py  melspectrogram.py  negative_sampling.py  pit.py  poincare.py  rvqvae.py  sdr.py  ssast.py  tagging.py  vqvae.py
audyn/functional/: __init__.py  activation.py  bitnet.py  clustering.py  hyperbolic.py  loudness.py  melspectrogram.py  poincare.py  positional_encoding.py  vector_quantization.py  vqvae.py
audyn/metrics/: __init__.py  base.py  crossmodal.py  retrieval.py
audyn/models/: __init__.py  ast.py  bsrnn.py  bsroformer.py  clap.py  clip.py  conv_tasnet.py  dprnn_tasnet.py  encodec.py  fastspeech.py  gan.py  glowtts.py  hifigan.py  hubert.py  lextransformer.py  music_tagging_transformer.py  musicfm.py  nafp.py  passt.py  pixelsnail.py  roformer.py  rvqvae.py  soundstream.py  ssast.py  swintransformer.py  tasnet.py  text_to_wave.py  vae.py  vqvae.py  waveglow.py  wavenet.py  wavenext.py
audyn/modules/: __init__.py  activation.py  ast.py  bitnet.py  bsrnn.py  bsroformer.py  clap.py  clip.py  conv_tasnet.py  convnext.py  dprnn.py  duration_predictor.py  encodec.py  fastspeech.py  film.py  flow.py  glow.py  glowtts.py  glu.py  hifigan.py  hubert.py  lextransformer.py  lora.py  manifold.py  music_tagging_transformer.py  musicfm.py  nafp.py  negative_sampling.py  normalization.py  passt.py  pixelcnn.py  pixelsnail.py  positional_encoding.py  roformer.py  rvq.py  soundstream.py  swintransformer.py  tasnet.py  transformer.py  transforms.py  (+5 more)
audyn/optim/: __init__.py  lr_scheduler.py  optimizer.py
audyn/transforms/: __init__.py  ast.py  birdclef.py  clap.py  clip.py  cqt.py  hifigan.py  hubert.py  kaldi.py  librosa.py  music_tagging_transformer.py  musicfm.py  resample.py  slicer.py  stft.py
audyn/utils/: __init__.py  clip_grad.py
cpp_extensions/monotonic_align/: monotonic_align.cpp
csrc/: audyn.h  bipartite_match.cpp  monotonic_align.cpp  monotonic_align_torch_2_4.cpp
docs/: api.rst  audyn.amp.rst  audyn.criterion.pit.rst  audyn.criterion.rst  audyn.criterion.sdr.rst  audyn.functional.positional_encoding.rst  audyn.functional.rst  audyn.models.ast.rst  audyn.models.clap.rst  audyn.models.clip.rst  audyn.models.hifigan.rst  audyn.models.passt.rst  audyn.models.roformer.rst  audyn.models.rst  audyn.models.ssast.rst  audyn.models.waveglow.rst  audyn.models.wavenet.rst  audyn.modules.bitnet.rst  audyn.modules.rst  audyn.modules.vit.rst  audyn.optim.lr_scheduler.rst  audyn.optim.optimizer.rst  audyn.optim.rst  audyn.transforms.rst  audyn.utils.data.birdclef.rst  audyn.utils.data.hifigan.rst  audyn.utils.data.jamendo_max_caps.rst  audyn.utils.data.mtg_jamendo.rst  audyn.utils.data.musdb18.rst  audyn.utils.data.rst  audyn.utils.data.vctk.rst  audyn.utils.driver.rst  audyn.utils.model.bitnet.rst  audyn.utils.model.rst  audyn.utils.modules.bitnet.rst  audyn.utils.modules.rst  audyn.utils.music.rst  audyn.utils.rst  commands.rst  conf.py  (+7 more)
notebooks/Loudness/: README.md  loudness_normalization.ipynb
notebooks/PoincareBall/: README.md  poincare_ball.ipynb
recipes/ClothoV2/: README.md
recipes/DnR-V2/: README.md
recipes/FMA/: README.md
recipes/FMA-small/: README.md
recipes/FSD50K/: README.md
recipes/LJSpeech-tiny/: _common
recipes/LSX/: README.md
recipes/LibriTTS-clean/: README.md
recipes/MUSDB18/: README.md
recipes/OpenMIC2018/: README.md
recipes/SongDescriber/: README.md
tests/: conftest.py
(+1614 files in other folders)
