[build-system]
requires = [
    "setuptools",
    "torch",
]
build-backend = "setuptools.build_meta"

[project]
name = "Audyn"
authors = [
    {name = "Takuya Hasumi"},
]
description = "A PyTorch toolkit for audio synthesis."
readme = "README.md"
license = {file = "LICENSE"}
urls = {url = "https://github.com/tky823/Audyn"}
requires-python = ">=3.10, <4"
dependencies = [
    "omegaconf",
    "hydra-core",
    "matplotlib",
    "torch",
    "torchaudio",
    "torchvision",
    "tensorboard",
    "numpy",
    "webdataset",
    "inflect",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
recipes = [
    "tqdm",
]
dev = [
    "ruff",
]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-autobuild",
    "nbsphinx",
    "furo",
]
tests = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
audyn-parse-run-command = "audyn.bin.parse_run_command:main"
audyn-download-ljspeech = "audyn.bin.download_ljspeech:main"
audyn-download-vctk = "audyn.bin.download_vctk:main"
audyn-download-musdb18 = "audyn.bin.download_musdb18:main"
audyn-decode-musdb18 = "audyn.bin.decode_musdb18:main"
audyn-download-fsd50k = "audyn.bin.download_fsd50k:main"
audyn-download-lsx = "audyn.bin.download_lsx:main"
audyn-download-dnr = "audyn.bin.download_dnr:main"
audyn-download-mtg-jamendo = "audyn.bin.download_mtg_jamendo:main"
audyn-download-fma = "audyn.bin.download_fma:main"
audyn-download-openmic2018 = "audyn.bin.download_openmic2018:main"
audyn-download-mtat = "audyn.bin.download_mtat:main"
audyn-download-singmos = "audyn.bin.download_singmos:main"
audyn-download-song-describer = "audyn.bin.download_song_describer:main"

[tool.setuptools.dynamic]
version = {attr = "audyn.__version__"}

[tool.setuptools.packages.find]
include = [
    "audyn",
]

[tool.setuptools.package-data]
# to include config of drivers
audyn = [
    "*yaml",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.pytest.ini_options]
# to import relative paths
pythonpath = [
    "tests",
]
